[tool.poetry]
name = "claude-compliance-sync"
version = "0.1.0"
description = "Sync Claude Compliance API interactions to Nebuly event ingestion"
authors = ["Nebuly"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4"
httpx = "^0.28.0"
pydantic = "^2.0"
python-dotenv = "^1.0.0"
tenacity = "^9.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
