[tool.poetry]
name = "copilot-sync"
version = "0.1.0"
description = "Sync Microsoft 365 Copilot Enterprise interactions to Nebuly event ingestion"
authors = ["The Nebuly Team"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4"
msgraph-sdk = "^1.0"
azure-identity = "^1.19"
httpx = "^0.28.0"
pydantic = "^2.0"
python-dotenv = "^1.0.0"
tenacity = "^9.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pre-commit = "^4.6.0"
ruff = "^0.15.0"
mypy = "^1.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
